--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "PORT=3001 next start"
   }
 }
