--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "PORT=3001 next start"
   }
 }
